feat: add session log

--- a/src/web/package.json
+++ b/src/web/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@vicons/ionicons5": "^0.13.0",
     "axios": "^1.6.5",
+    "highlight.js": "^11.11.1",
+    "marked": "^17.0.1",
     "naive-ui": "^2.43.2",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
