--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   ],
   "dependencies": {
     "@iarna/toml": "^2.2.5",
+    "adm-zip": "^0.5.16",
     "chalk": "^4.1.2",
     "express": "^4.18.2",
     "http-proxy": "^1.18.1",
